--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Cristian E. Nuno!</h1>
-				<p>I'm currently a dual Masters of Public Administration and Certificate of Advanced Study in Data Science graduate student at Syracuse University. <a href="/about"></a></p>
+				<p>I'm currently a dual Masters of Public Administration and Certificate of Advanced Study in Data Science graduate student at Syracuse University.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
