--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Cristian E. Nuno</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Cristian E. Nuno!</h1>
-				<p>I'm currently a dual Masters of Public Administration and Certificate of Advanced Study in Data Science graduate student at Syracuse University.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:nuno.e.cristian@gmail.com">email</a></li>
-        		<li><a href="https://github.com/cenuno">github.com/cenuno</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Cristian E. Nuno
+---
+<div class="blurb">
+	<h1>Hi there, I'm Cristian E. Nuno!</h1>
+	<p>I'm currently a dual Masters of Public Administration and Certificate of Advanced Study in Data Science graduate student at Syracuse University.</p>
+</div><!-- /.blurb -->
