--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Cristian E. Nuno
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Cristian E. Nuno!</h1>
-	<p>I'm currently a dual Masters of Public Administration and Certificate of Advanced Study in Data Science graduate student at Syracuse University.</p>
+	<p>I'm currently a dual Masters of Public Administration and Certificate of Advanced Study in Data Science graduate student at Syracuse University. <a href="about">Read more about my interest in data science and public policy here.</a></p>
 </div><!-- /.blurb -->
