Changed file name from index.html to home.html

--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Hello World</title>
+<title></title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -285,7 +285,7 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="home.html">Home</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -307,12 +307,14 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Hello World</h1>
 
 </div>
 
 
-<p>Hope this works.</p>
+<div id="urban-data-science" class="section level1">
+<h1>Urban Data Science</h1>
+<p><a href="https://cenuno.github.io/">Urban Data Science</a> showcases my latest efforts to combine my public policy background and my data scientist background into open-source tutorials. The idea is that people can and should combine these two fields to make the world a better place by sharing knowledge.</p>
+</div>
 
 
 
