Added under construction sign.

--- a/index.html
+++ b/index.html
@@ -312,7 +312,23 @@ div.tocify {
 </div>
 
 
-<p>Hope this works.</p>
+<p><base target="_top"/></p>
+<center>
+<img src="http://www.picserver.org/images/highway/phrases/under-construction.jpg" />
+</center>
+<div id="under-construction" class="section level2">
+<h2>Under Construction</h2>
+<p><em>December 29, 2017</em></p>
+<p>Urban Data Science is currently being redesigned. In the meantime, please see the following links to get in touch with me:</p>
+<ul>
+<li><p><a href="https://rpubs.com/cenuno">RPubs blog posts showcasing my latest R tutorials</a>.</p></li>
+<li><p><a href="https://stackoverflow.com/users/7954106/aspiringurbandatascientist">Stack Overflow</a>.</p></li>
+<li><p>Connect on <a href="https://www.linkedin.com/in/cristiannuno">LinkedIn</a></p></li>
+<li><p>Email me at cenuno AT uchicago DOT edu</p></li>
+</ul>
+<p>Thank you for your continued support as I create tutorials for folks to learn how to use R to conduct analysis.</p>
+<hr />
+</div>
 
 
 
