--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@ div.tocify {
 <p>Urban Data Science is currently being redesigned. In the meantime, please see the following links to get in touch with me:</p>
 <ul>
 <li><p><a href="https://rpubs.com/cenuno">RPubs blog posts showcasing my latest R tutorials</a>.</p></li>
-<li><p><a href="https://stackoverflow.com/users/7954106/aspiringurbandatascientist">Stack Overflow</a>.</p></li>
-<li><p>Connect on <a href="https://www.linkedin.com/in/cristiannuno">LinkedIn</a></p></li>
-<li><p>Email me at cenuno AT uchicago DOT edu</p></li>
+<li><p><a href="https://stackoverflow.com/users/7954106/aspiringurbandatascientist">My Stack Overflow profile</a>.</p></li>
+<li><p>Connect on <a href="https://www.linkedin.com/in/cristiannuno">LinkedIn</a>.</p></li>
+<li><p>Email me at cenuno AT uchicago DOT edu.</p></li>
 </ul>
 <p>Thank you for your continued support as I create tutorials for folks to learn how to use R to conduct analysis.</p>
 <hr />
