Construction of Urban Data Science is complete.

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -206,13 +206,6 @@ $(document).ready(function () {
     About
   </a>
 </li>
-<li>
-  <a href="disclaimer.html">
-    <span class="fa fa-file-text fa-lg"></span>
-     
-    Disclaimer
-  </a>
-</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -234,10 +227,13 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="mailto:nuno.e.cristian@gmail.com">
+  <a href="mailto:cenuno@uchicago.edu">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
+</li>
+<li>
+  <a href="terms_and_conditions.html">Terms</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -253,15 +249,30 @@ $(document).ready(function () {
 
 
 <p><base target="_top"/></p>
-<div id="welcome" class="section level1">
-<h1>Welcome</h1>
-<p>My name is Cristian E. Nuno and I believe that sharing knowledge is one way to make the world a better place.</p>
-<p><em>Urban Data Science</em> showcases my latest efforts to combine my public policy and data analytics background into open-source tutorials.</p>
-<p>By lifting the black box and exposing both the excitment and limitations of data analysis, I wish to inpsire folks with less technical backgrounds to jump into the field of data analytics. The world needs you - so start learning today!</p>
+<div id="about-me" class="section level1">
+
+<h1>Disclaimer</h1>
+
+<p>Last updated: January 01, 2018</p>
+
+<p>The information contained on https://cenuno.github.io/ website (the "Service") is for general information purposes only.</p>
+
+<p>Urban Data Science assumes no responsibility for errors or omissions in the contents on the Service.</p>
+
+<p>In no event shall Urban Data Science be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. Urban Data Science reserves the right to make additions, deletions, or modification to the contents on the Service at any time without prior notice.</p>
+
+<p>Urban Data Science does not warrant that the website is free of viruses or other harmful components.</p>
+
+<h2>External links disclaimer</h2>
+
+<p>https://cenuno.github.io/ website may contain links to external websites that are not provided or maintained by or in any way affiliated with Urban Data Science</p>
+
+<p>Please note that the Urban Data Science does not guarantee the accuracy, relevance, timeliness, or completeness of any information on these external websites.</p>
+
 </div>
 
 <br>
-<span style="color:#CCCCCC">Copyright &copy; 2017 - 2018. Urban Data Science. Email me at <a href='mailto:nuno.e.cristian@gmail.com'>nuno DOT e DOT cristian AT gmail DOT com</a>. All rights reserved. See Disclaimer for further details.</span>
+<span style="color:#CCCCCC">Copyright &copy; Urban Data Science. All rights reserved. See <a href='terms_and_conditions.html'>Disclaimer</a> for further details.</span>
 
 
 
