Corrected footer alignment.

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -206,6 +206,13 @@ $(document).ready(function () {
     About
   </a>
 </li>
+<li>
+  <a href="disclaimer.html">
+    <span class="fa fa-file-text fa-lg"></span>
+     
+    Disclaimer
+  </a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -227,13 +234,10 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="mailto:cenuno@uchicago.edu">
+  <a href="mailto:nuno.e.cristian@gmail.com">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
-</li>
-<li>
-  <a href="terms_and_conditions.html">Terms</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -249,8 +253,6 @@ $(document).ready(function () {
 
 
 <p><base target="_top"/></p>
-<div id="about-me" class="section level1">
-
 <h1>Disclaimer</h1>
 
 <p>Last updated: January 01, 2018</p>
@@ -269,10 +271,8 @@ $(document).ready(function () {
 
 <p>Please note that the Urban Data Science does not guarantee the accuracy, relevance, timeliness, or completeness of any information on these external websites.</p>
 
-</div>
-
 <br>
-<span style="color:#CCCCCC">Copyright &copy; Urban Data Science. All rights reserved. See <a href='terms_and_conditions.html'>Disclaimer</a> for further details.</span>
+<span style="color:#CCCCCC">Copyright &copy; 2017 - 2018. Urban Data Science. Email me at <a href='mailto:nuno.e.cristian@gmail.com'>nuno DOT e DOT cristian AT gmail DOT com</a>. All rights reserved. See Disclaimer for further details.</span>
 
 
 
@@ -303,3 +303,4 @@ $(document).ready(function () {
 
 </body>
 </html>
+
