Corrected section level2 header in About Me.

--- a/choropleth_map.html
+++ b/choropleth_map.html
@@ -617,8 +617,8 @@ legend( x = &quot;right&quot;
 <div id="about-me" class="section level1">
 <h1>About Me</h1>
 <p>Thank you for reading this tutorial. My name is Cristian E. Nuno and I am an aspiring data scientist. To see more of my work, please visit my professional portfolio <a href="https://cenuno.github.io/"><em>Urban Data Science</em></a>.</p>
-<div id="session-info-and-rstudio-version" class="section level2">
-<h2>Session Info and RStudio Version</h2>
+<div id="session-info" class="section level2">
+<h2>Session Info</h2>
 <pre class="r"><code># Print version information about R, the OS and attached or loaded packages.
 sessionInfo()</code></pre>
 <p>R version 3.4.3 (2017-11-30) Platform: x86_64-apple-darwin15.6.0 (64-bit) Running under: macOS Sierra 10.12.6</p>
