Eliminated caption for offline image.

--- a/choropleth_map.html
+++ b/choropleth_map.html
@@ -549,7 +549,7 @@ us.states &lt;- rbind(us.states, alaska, hawaii)</code></pre>
 <h2>Plot</h2>
 <p>After all that hard work, now is the time to create the choropleth map.</p>
 <center>
-<img src="/Users/cristiannuno/RStudio_All/US_State_Shapefiles/awesome_people.png" alt="ss" />
+<img src="/Users/cristiannuno/RStudio_All/US_State_Shapefiles/awesome_people.png" />
 </center>
 <pre class="r"><code># clear margin space and set plot background color
 par( mar = c(2, 0, 3, 0 )
