--- a/choropleth_map.html
+++ b/choropleth_map.html
@@ -548,9 +548,7 @@ us.states &lt;- rbind(us.states, alaska, hawaii)</code></pre>
 <div id="plot" class="section level2">
 <h2>Plot</h2>
 <p>After all that hard work, now is the time to create the choropleth map.</p>
-<center>
-<img src="/Users/cristiannuno/RStudio_All/US_State_Shapefiles/awesome_people.png" />
-</center>
+<p><img src='/Users/cristiannuno/RStudio_All/US_State_Shapefiles/awesome_people.png' style='margin:0px auto; display:block; width: 100%' class='center'></p>
 <pre class="r"><code># clear margin space and set plot background color
 par( mar = c(2, 0, 3, 0 )
      , bg = &quot;ghostwhite&quot;
