--- a/choropleth_map.html
+++ b/choropleth_map.html
@@ -548,7 +548,7 @@ us.states &lt;- rbind(us.states, alaska, hawaii)</code></pre>
 <div id="plot" class="section level2">
 <h2>Plot</h2>
 <p>After all that hard work, now is the time to create the choropleth map.</p>
-<p><img src=/Users/cristiannuno/RStudio_All/Website/choropleth_map_files/figure-html/awesome_people.png style='margin:0px auto; display:block; width: 100%' class='center'<image/></p>
+<p><img src='https://github.com/cenuno/cenuno.github.io/raw/master/choropleth_map_files/figure-html/awesome_people.png' style='margin:0px auto; display:block; width: 100%' class='center'<image/></p>
 <pre class="r"><code># clear margin space and set plot background color
 par( mar = c(2, 0, 3, 0 )
      , bg = &quot;ghostwhite&quot;
