--- a/README.html
+++ b/README.html
@@ -251,9 +251,12 @@ $(document).ready(function () {
 </div>
 
 
-<div id="urban-data-science" class="section level1">
-<h1>Urban Data Science</h1>
-<p><a href="https://cenuno.github.io/">Urban Data Science</a> showcases my latest efforts to combine my public policy background and my data scientist background into open-source tutorials. The idea is that people can and should combine these two fields to make the world a better place by sharing knowledge.</p>
+<div id="welcome" class="section level1">
+<h1>Welcome</h1>
+<p>My name is Cristian E. Nuno and I believe that sharing knowledge is one way to make the world a better place.</p>
+<p><a href="https://cenuno.github.io/"><em>Urban Data Science</em></a> showcases my latest efforts to combine my public policy background and my data scientist background into open-source tutorials. The idea is that people can and should combine these two fields to make the world a better place by sharing knowledge.</p>
+<p>By lifting the black box and exposing both the excitment and limitations of data analysis, I wish to inpsire folks with less technical backgrounds to jump into the field of data analytics. The world needs you - so start learning today!</p>
+<p><br> <span style="color:#CCCCCC">Copyright © 2017 - 2018. Urban Data Science. Email me at <a href='mailto:nuno.e.cristian@gmail.com'>nuno DOT e DOT cristian AT gmail DOT com</a>. All rights reserved. See Disclaimer for further details.</span></p>
 </div>
 
 <br>
