Added disclaimer information to an .Rmd file.

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -189,7 +189,7 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">R</li>
     <li>
-      <a href="Label_Points_inside_Polygons.html">Label Points Inside Polygons</a>
+      <a href="Label_Points_Inside_Polygons.html">Label Points Inside Polygons</a>
     </li>
     <li>
       <a href="choropleth_map.html">Make a Choropleth Map</a>
@@ -253,23 +253,23 @@ $(document).ready(function () {
 
 
 <p><base target="_top"/></p>
+<div id="disclaimer" class="section level1">
 <h1>Disclaimer</h1>
-
 <p>Last updated: January 01, 2018</p>
-
-<p>The information contained on https://cenuno.github.io/ website (the "Service") is for general information purposes only.</p>
-
+<p>The information contained on <a href="https://cenuno.github.io/" class="uri">https://cenuno.github.io/</a> website (the “Service”) is for general information purposes only.</p>
 <p>Urban Data Science assumes no responsibility for errors or omissions in the contents on the Service.</p>
-
 <p>In no event shall Urban Data Science be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. Urban Data Science reserves the right to make additions, deletions, or modification to the contents on the Service at any time without prior notice.</p>
-
 <p>Urban Data Science does not warrant that the website is free of viruses or other harmful components.</p>
-
+<div id="external-links-disclaimer" class="section level2">
 <h2>External links disclaimer</h2>
-
-<p>https://cenuno.github.io/ website may contain links to external websites that are not provided or maintained by or in any way affiliated with Urban Data Science</p>
-
+<p><a href="https://cenuno.github.io/" class="uri">https://cenuno.github.io/</a> website may contain links to external websites that are not provided or maintained by or in any way affiliated with Urban Data Science.</p>
 <p>Please note that the Urban Data Science does not guarantee the accuracy, relevance, timeliness, or completeness of any information on these external websites.</p>
+</div>
+<div id="human-error" class="section level2">
+<h2>Human Error</h2>
+<p>There will be times I state incorrect recommendations or suggestions. I encourage readers to file a new issue on the <a href="https://github.com/cenuno/cenuno.github.io/issues"><code>Issues</code></a> tab on the GitHub page for this website.</p>
+</div>
+</div>
 
 <br>
 <span style="color:#CCCCCC">Copyright &copy; 2017 - 2018. Urban Data Science. Email me at <a href='mailto:nuno.e.cristian@gmail.com'>nuno DOT e DOT cristian AT gmail DOT com</a>. All rights reserved. See Disclaimer for further details.</span>
@@ -303,4 +303,3 @@ $(document).ready(function () {
 
 </body>
 </html>
-
