--- a/Label_Points_Inside_Polygons.html
+++ b/Label_Points_Inside_Polygons.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Cristian Nuno" />
 
-<meta name="date" content="2018-01-07" />
+<meta name="date" content="2018-01-09" />
 
 <title>Label Points Inside Polygons</title>
 
@@ -306,21 +306,16 @@ div.tocify {
     <li>
       <a href="distance_coord_pairs.html">Highlight Points Inside a Certain Radius</a>
     </li>
+    <li>
+      <a href="Mapping_CTA.html">Mapping Public Transportation in Chicago</a>
+    </li>
   </ul>
 </li>
 <li>
-  <a href="about.html">
-    <span class="fa fa-info fa-lg"></span>
-     
-    About
-  </a>
+  <a href="about.html">About</a>
 </li>
 <li>
-  <a href="disclaimer.html">
-    <span class="fa fa-file-text fa-lg"></span>
-     
-    Disclaimer
-  </a>
+  <a href="disclaimer.html">Disclaimer</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -367,7 +362,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Label Points Inside Polygons</h1>
 <h4 class="author"><em>Cristian Nuno</em></h4>
-<h4 class="date"><em>January 07, 2018</em></h4>
+<h4 class="date"><em>January 09, 2018</em></h4>
 
 </div>
 
@@ -1617,16 +1612,17 @@ sessionInfo()</code></pre>
 ## [8] base     
 ## 
 ## other attached packages:
-## [1] bindrcpp_0.2    splancs_2.01-40 png_0.1-7       pander_0.6.1   
-## [5] magrittr_1.5    dplyr_0.7.4     rgdal_1.2-16    sp_1.2-5       
+##  [1] bindrcpp_0.2    splancs_2.01-40 png_0.1-7       pander_0.6.1   
+##  [5] magrittr_1.5    dplyr_0.7.4     geosphere_1.5-7 rgdal_1.2-16   
+##  [9] raster_2.6-7    maptools_0.9-2  sp_1.2-5       
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] Rcpp_0.12.14     knitr_1.17       bindr_0.1        lattice_0.20-35 
+##  [1] Rcpp_0.12.14     bindr_0.1        knitr_1.17       lattice_0.20-35 
 ##  [5] R6_2.2.2         rlang_0.1.6      stringr_1.2.0    tools_3.4.3     
 ##  [9] htmltools_0.3.6  yaml_2.1.16      rprojroot_1.3-1  digest_0.6.13   
 ## [13] assertthat_0.2.0 tibble_1.4.1     glue_1.2.0       evaluate_0.10.1 
 ## [17] rmarkdown_1.8    stringi_1.1.6    pillar_1.0.1     compiler_3.4.3  
-## [21] backports_1.1.2  pkgconfig_2.0.1</code></pre>
+## [21] backports_1.1.2  foreign_0.8-69   pkgconfig_2.0.1</code></pre>
 </div>
 </div>
 
