--- a/Mapping_CTA.html
+++ b/Mapping_CTA.html
@@ -306,21 +306,16 @@ div.tocify {
     <li>
       <a href="distance_coord_pairs.html">Highlight Points Inside a Certain Radius</a>
     </li>
+    <li>
+      <a href="Mapping_CTA.html">Mapping Public Transportation in Chicago</a>
+    </li>
   </ul>
 </li>
 <li>
-  <a href="about.html">
-    <span class="fa fa-info fa-lg"></span>
-     
-    About
-  </a>
+  <a href="about.html">About</a>
 </li>
 <li>
-  <a href="disclaimer.html">
-    <span class="fa fa-file-text fa-lg"></span>
-     
-    Disclaimer
-  </a>
+  <a href="disclaimer.html">Disclaimer</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -679,13 +674,21 @@ sessionInfo()</code></pre>
 ## [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
 ## 
 ## attached base packages:
-## [1] stats     graphics  grDevices utils     datasets  methods   base     
+## [1] grid      stats     graphics  grDevices utils     datasets  methods  
+## [8] base     
+## 
+## other attached packages:
+##  [1] bindrcpp_0.2    splancs_2.01-40 png_0.1-7       pander_0.6.1   
+##  [5] magrittr_1.5    dplyr_0.7.4     geosphere_1.5-7 rgdal_1.2-16   
+##  [9] raster_2.6-7    maptools_0.9-2  sp_1.2-5       
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] compiler_3.4.3  backports_1.1.2 magrittr_1.5    rprojroot_1.3-1
-##  [5] tools_3.4.3     htmltools_0.3.6 yaml_2.1.16     Rcpp_0.12.14   
-##  [9] stringi_1.1.6   rmarkdown_1.8   knitr_1.17      stringr_1.2.0  
-## [13] digest_0.6.13   evaluate_0.10.1</code></pre>
+##  [1] Rcpp_0.12.14     bindr_0.1        knitr_1.17       lattice_0.20-35 
+##  [5] R6_2.2.2         rlang_0.1.6      stringr_1.2.0    tools_3.4.3     
+##  [9] htmltools_0.3.6  yaml_2.1.16      rprojroot_1.3-1  digest_0.6.13   
+## [13] assertthat_0.2.0 tibble_1.4.1     glue_1.2.0       evaluate_0.10.1 
+## [17] rmarkdown_1.8    stringi_1.1.6    pillar_1.0.1     compiler_3.4.3  
+## [21] backports_1.1.2  foreign_0.8-69   pkgconfig_2.0.1</code></pre>
 </div>
 </div>
 
