--- a/distance_coord_pairs.html
+++ b/distance_coord_pairs.html
@@ -306,21 +306,16 @@ div.tocify {
     <li>
       <a href="distance_coord_pairs.html">Highlight Points Inside a Certain Radius</a>
     </li>
+    <li>
+      <a href="Mapping_CTA.html">Mapping Public Transportation in Chicago</a>
+    </li>
   </ul>
 </li>
 <li>
-  <a href="about.html">
-    <span class="fa fa-info fa-lg"></span>
-     
-    About
-  </a>
+  <a href="about.html">About</a>
 </li>
 <li>
-  <a href="disclaimer.html">
-    <span class="fa fa-file-text fa-lg"></span>
-     
-    Disclaimer
-  </a>
+  <a href="disclaimer.html">Disclaimer</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
