Forgot to commit the .html file for the update to About.

--- a/about.html
+++ b/about.html
@@ -394,10 +394,13 @@ div.tocify {
 <p>Since the summer of 2017, I currently work as a <a href="https://urbanlabs.uchicago.edu/people/cristian-nuno">Project Associate</a> for the Poverty Lab, one of the five Labs established within the <a href="https://urbanlabs.uchicago.edu/about">University of Chicago’s Urban Labs</a>.</p>
 <p>As one of the smaller labs, my position allows me to take on a wide-range of responsibilites. A few them are as follows:</p>
 <ul>
-<li>Identify equivalent individuals, using both deterministic and probabilistic record linkage methods, in administrative datasets using R.</li>
-<li>Visualize descriptive statistics, not limited to but including choropleth maps, small multiple plots, and grouped bar charts, using R.</li>
-<li>Train two undergraduate interns to use version control on their joint interactive visualization project, using the Shiny and Leaflet R packages.</li>
-<li>Train qualitatively-strong coworkers to use R, RStudio, and RMarkdown to both produce internal reports and export crosstabs as CSV files.</li>
+<li><p>Import, clean, and transform data sets from multiple sources in order to understand and answer research questions using R.</p></li>
+<li><p>Coordinate with diverse set of senior stakeholders on requirements, roles, responsibilities, and project timelines.</p></li>
+<li><p>Map, plot, and create interactive visualizations for descriptive statistics.</p></li>
+<li><p>Train inexperienced programmers how to use R.</p></li>
+<li><p>Use version control for overseeing the entire analytical development lifecycle of our research projects.</p></li>
+<li><p>Conduct quality assurance checks for both R and Python scripts.</p></li>
+<li><p>Identify equivalent individuals, using both deterministic and probabilistic record linkage methods, in administrative datasets using R.</p></li>
 </ul>
 </div>
 </div>
