Updated skills to my resume.

--- a/Mapping_CTA.html
+++ b/Mapping_CTA.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Cristian Nuno" />
 
-<meta name="date" content="2018-01-09" />
+<meta name="date" content="2018-05-14" />
 
 <title>Mapping Public Transportation in Chicago</title>
 
@@ -362,7 +362,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Mapping Public Transportation in Chicago</h1>
 <h4 class="author"><em>Cristian Nuno</em></h4>
-<h4 class="date"><em>January 09, 2018</em></h4>
+<h4 class="date"><em>May 14, 2018</em></h4>
 
 </div>
 
@@ -662,9 +662,9 @@ dev.off()</code></pre>
 <h2>Session Info</h2>
 <pre class="r"><code># Print version information about R, the OS and attached or loaded packages.
 sessionInfo()</code></pre>
-<pre><code>## R version 3.4.3 (2017-11-30)
+<pre><code>## R version 3.4.4 (2018-03-15)
 ## Platform: x86_64-apple-darwin15.6.0 (64-bit)
-## Running under: macOS Sierra 10.12.6
+## Running under: macOS High Sierra 10.13.2
 ## 
 ## Matrix products: default
 ## BLAS: /Library/Frameworks/R.framework/Versions/3.4/Resources/lib/libRblas.0.dylib
@@ -679,21 +679,21 @@ sessionInfo()</code></pre>
 ## 
 ## other attached packages:
 ##  [1] bindrcpp_0.2    splancs_2.01-40 png_0.1-7       pander_0.6.1   
-##  [5] magrittr_1.5    dplyr_0.7.4     geosphere_1.5-7 rgdal_1.2-16   
-##  [9] raster_2.6-7    maptools_0.9-2  sp_1.2-5       
+##  [5] magrittr_1.5    dplyr_0.7.4     geosphere_1.5-7 rgdal_1.2-18   
+##  [9] raster_2.6-7    maptools_0.9-2  sp_1.2-7       
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] Rcpp_0.12.14     bindr_0.1        knitr_1.17       lattice_0.20-35 
-##  [5] R6_2.2.2         rlang_0.1.6      stringr_1.2.0    tools_3.4.3     
-##  [9] htmltools_0.3.6  yaml_2.1.16      rprojroot_1.3-1  digest_0.6.13   
-## [13] assertthat_0.2.0 tibble_1.4.1     glue_1.2.0       evaluate_0.10.1 
-## [17] rmarkdown_1.8    stringi_1.1.6    pillar_1.0.1     compiler_3.4.3  
+##  [1] Rcpp_0.12.16     bindr_0.1.1      knitr_1.20       lattice_0.20-35 
+##  [5] R6_2.2.2         rlang_0.2.0      stringr_1.3.0    tools_3.4.4     
+##  [9] htmltools_0.3.6  yaml_2.1.18      rprojroot_1.3-2  digest_0.6.15   
+## [13] assertthat_0.2.0 tibble_1.4.2     glue_1.2.0       evaluate_0.10.1 
+## [17] rmarkdown_1.9    stringi_1.1.7    pillar_1.2.1     compiler_3.4.4  
 ## [21] backports_1.1.2  foreign_0.8-69   pkgconfig_2.0.1</code></pre>
 </div>
 </div>
 
 <br>
-<span style="color:#CCCCCC">Copyright &copy; 2017 - 2018. Urban Data Science. Email me at <a href='mailto:nuno.e.cristian@gmail.com'>nuno DOT e DOT cristian AT gmail DOT com</a>. All rights reserved. See Disclaimer for further details.</span>
+<span style="color:#CCCCCC">Copyright &copy; 2017 - 2018. Urban Data Science. All rights reserved. See Disclaimer for further details.</span>
 
 
 </div>
