--- a/about.html
+++ b/about.html
@@ -394,19 +394,20 @@ div.tocify {
 <p>Since the summer of 2017, I currently work as a <a href="https://urbanlabs.uchicago.edu/people/cristian-nuno">Project Associate</a> for the Poverty Lab, one of the five Labs established within the <a href="https://urbanlabs.uchicago.edu/about">University of Chicago’s Urban Labs</a>.</p>
 <p>As one of the smaller labs, my position allows me to take on a wide-range of responsibilites. A few them are as follows:</p>
 <ul>
-<li><p>Import, clean, and transform data sets from multiple sources in order to understand and answer research questions using R.</p></li>
-<li><p>Coordinate with diverse set of senior stakeholders on requirements, roles, responsibilities, and project timelines.</p></li>
-<li><p>Map, plot, and create interactive visualizations for descriptive statistics.</p></li>
-<li><p>Train inexperienced programmers how to use R.</p></li>
-<li><p>Use version control for overseeing the entire analytical development lifecycle of our research projects.</p></li>
-<li><p>Conduct quality assurance checks for both R and Python scripts.</p></li>
+<li><p>Translate research questions from principal investigators, research managers, and clients into a technical design to develop project requirements and extract, transform, and load (ETL) specifications.</p></li>
+<li><p>Produce static and interactive visualizations that showcase the stories embedded within the clients data.</p></li>
+<li><p>Configure and maintain source code repositories using Git.</p></li>
+<li><p>Use branching to create, test, and push new features to master branch.</p></li>
 <li><p>Identify equivalent individuals, using both deterministic and probabilistic record linkage methods, in administrative datasets using R.</p></li>
+<li><p><a href="https://github.com/Poverty-Lab/ACS-Map-Dashboard">Developing a Shiny app with colleague</a> that aggregates census tract information up to the Chicago community area level.</p></li>
+<li><p>Rely on passion for self-learning to teach myself new packages, methods, and tools needed to answer research questions.</p></li>
+<li><p>Constantly seeking feedback to improve my ability to communicate technical insights to both technical and non-technical team members.</p></li>
 </ul>
 </div>
 </div>
 
 <br>
-<span style="color:#CCCCCC">Copyright &copy; 2017 - 2018. Urban Data Science. Email me at <a href='mailto:nuno.e.cristian@gmail.com'>nuno DOT e DOT cristian AT gmail DOT com</a>. All rights reserved. See Disclaimer for further details.</span>
+<span style="color:#CCCCCC">Copyright &copy; 2017 - 2018. Urban Data Science. All rights reserved. See Disclaimer for further details.</span>
 
 
 </div>
