--- a/disclaimer.html
+++ b/disclaimer.html
@@ -267,7 +267,7 @@ $(document).ready(function () {
 </div>
 
 <br>
-<span style="color:#CCCCCC">Copyright &copy; 2017 - 2018. Urban Data Science. Email me at <a href='mailto:nuno.e.cristian@gmail.com'>nuno DOT e DOT cristian AT gmail DOT com</a>. All rights reserved. See Disclaimer for further details.</span>
+<span style="color:#CCCCCC">Copyright &copy; 2017 - 2018. Urban Data Science. All rights reserved. See Disclaimer for further details.</span>
 
 
 
